# pyransame

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-doc.txt  requirements-test.txt
.devcontainer/: devcontainer.json  oncreatecommand.sh
.github/: dependabot.yml  release.yml
.github/workflows/: build_docs.yml  pages_publish.yml  python-publish.yml  test.yml
doc/: Makefile  api.rst  conf.py  index.rst  sphinxext.py
examples_src/: README.rst  plot_01_random_surface_sampling.py  plot_02_weighted_sampling.py  plot_03_volume_sampling.py  plot_05_random_points.py  plot_06_random_number_generator.py
src/pyransame/: __init__.py  _version.py  accessor.py  line.py  surface.py  util.py  vertex.py  volume.py
tests/: __init__.py  conftest.py  test_accessor.py  test_random_dataset.py  test_random_line_points.py  test_random_surface_points.py  test_random_vertex_points.py  test_random_volume_points.py  test_rng.py  test_util.py
