[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pyransame"
requires-python = ">=3.8"
dependencies = [
    "pyvista",
    "numpy",
]

[tool.setuptools_scm]
write_to = "src/pyransame/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
